# asciidoc-to-reqif

./: README.md  pyproject.toml
.github/workflows/: feature-build.yml
src/asciidoc_to_reqif/: base.xml  convert.py  generate_reqif.py  model.py  parse_custom_xml.py  reqif.rb
tests/: test_image_paths.py
tests/image_paths_data/imagesdir_notset/: good_practice.adoc
tests/image_paths_data/imagesdir_set/: good_practice.adoc
